--- a/projects/ctx-relatorios/src/lib/pages/relatorio-detalhado/relatorio-detalhado.component.html
+++ b/projects/ctx-relatorios/src/lib/pages/relatorio-detalhado/relatorio-detalhado.component.html
@@ -1,20 +1,30 @@
-<p>Opa!</p>
-
-<div class="card flex justify-content-center">
-    <p-button label="Submit"></p-button>
+<div class="card flex md:justify-content-start flex-wrap">
+    <div class="flex align-items-center justify-content-center2 font-bold m-2">
+        <p-image
+            src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fthumbs.dreamstime.com%2Fz%2Fexemplo-104335655.jpg&f=1&nofb=1&ipt=c67d11e991e81e4348223aeb933204752c36248084d5e98b15721f43c2d64324&ipo=images"
+            alt="imagem exemplo" width="250"></p-image>
+    </div>
+    <div class="flex align-items-center justify-content-center2 font-bold m-2">
+        <p>Texto de exemplo</p>
+    </div>
 </div>
-
-<!-- <p-table [value]="products">
-    <ng-template pTemplate="header">
-        <tr>
-            <th>Code</th>
-            <th>Name</th>
-        </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-product>
-        <tr>
-            <td>{{ product.code }}</td>
-            <td>{{ product.name }}</td>
-        </tr>
-    </ng-template>
-</p-table> -->
+<div class="card flex md:justify-content-end flex-wrap">
+    <div class="flex align-items-center justify-content-center2 font-bold m-2">
+        <p>Texto de exemplo</p>
+    </div>
+    <div class="flex align-items-center justify-content-center2 font-bold m-2">
+        <p-image
+            src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fthumbs.dreamstime.com%2Fz%2Fexemplo-104335655.jpg&f=1&nofb=1&ipt=c67d11e991e81e4348223aeb933204752c36248084d5e98b15721f43c2d64324&ipo=images"
+            alt="imagem exemplo" width="250"></p-image>
+    </div>
+</div>
+<div class="card flex md:justify-content-start flex-wrap">
+    <div class="flex align-items-center justify-content-center2 font-bold m-2">
+        <p-image
+            src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fthumbs.dreamstime.com%2Fz%2Fexemplo-104335655.jpg&f=1&nofb=1&ipt=c67d11e991e81e4348223aeb933204752c36248084d5e98b15721f43c2d64324&ipo=images"
+            alt="imagem exemplo" width="250"></p-image>
+    </div>
+    <div class="flex align-items-center justify-content-center2 font-bold m-2">
+        <p>Texto de exemplo</p>
+    </div>
+</div>
