feat: Adicionado componente de carrosel

--- a/projects/ctx-relatorios/src/lib/pages/relatorio-detalhado/relatorio-detalhado.component.html
+++ b/projects/ctx-relatorios/src/lib/pages/relatorio-detalhado/relatorio-detalhado.component.html
@@ -1,3 +1,4 @@
-<ctx-relatorios-imagem-descricao [posicaoImagem]="'start'" />
-<ctx-relatorios-imagem-descricao [posicaoImagem]="'end'" />
-<ctx-relatorios-imagem-descricao [posicaoImagem]="'start'" />
+<ctx-relatorios-imagem-com-descricao [posicaoImagem]="'start'" />
+<ctx-relatorios-imagem-com-descricao [posicaoImagem]="'end'" />
+<ctx-relatorios-imagem-com-descricao [posicaoImagem]="'start'" />
+<ctx-relatorios-carrossel-com-descricao />
