fix: Contabilidade dos acionamentos com critério errado

--- a/projects/ctx-relatorios/src/lib/pages/relatorio-detalhado/relatorio-detalhado.component.html
+++ b/projects/ctx-relatorios/src/lib/pages/relatorio-detalhado/relatorio-detalhado.component.html
@@ -2,22 +2,24 @@
     <ctx-relatorios-imagem-com-descricao [card]="card" [posicaoImagem]="card.posicao" />
 </ng-container>
 
-<div class="flex justify-content-center">
-    <div class="card flex-1 ml-2 mr-1 my-1">
-        <h6>Quantidade de acionamentos da bomba:</h6>
-        <h2>{{quantidadeAcionamentosMes}}</h2>
-        <h6>Vezes no último mês</h6>
-        <p>Último registro realizado em: {{dadosBomba.dataRegistro}}</p>
+<ng-container *ngIf="ultimoRegistroSolo">
+    <div class="flex justify-content-center">
+        <div class="card flex-1 ml-2 mr-1 my-1">
+            <h6>Quantidade de acionamentos da bomba:</h6>
+            <h2>{{quantidadeAcionamentosMes}}</h2>
+            <h6>Vezes no último mês</h6>
+            <p>Último registro realizado em: {{dadosBomba.dataRegistro}}</p>
+        </div>
+        <div class="card flex-1 mr-1 ml-1 my-1">
+            <h6>Estado atual da bomba:</h6>
+            <h2>{{ dadosBomba.tipoAcao }}</h2>
+        </div>
+        <div class="card flex-1 mr-2 ml-1 my-1">
+            <h6>Estado atual do solo:</h6>
+            <h2>{{ ultimoRegistroSolo.estado }}</h2>
+        </div>
     </div>
-    <div class="card flex-1 mr-1 ml-1 my-1">
-        <h6>Estado atual da bomba:</h6>
-        <h2>{{ dadosBomba.tipoAcao }}</h2>
-    </div>
-    <div class="card flex-1 mr-2 ml-1 my-1">
-        <h6>Estado atual do solo:</h6>
-        <h2>{{ ultimoRegistroSolo.estado }}</h2>
-    </div>
-</div>
+</ng-container>
 
 <div class="card m-2">
     <p-chart type="bar" [data]="dadosSolo" [options]="basicOptions" height="300px"></p-chart>
